--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Front-end-Projects</title>
+    <title>Profile | M Devika</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -12,35 +12,41 @@
 </head>
 <body>
     <div class="container-fluid">
-        <h1> Front-End Projects</h1>
-        <div class="container imges">
-            <div class="row">
-                <div class="col-md-4 col-sm-6 mb-4">
-                    <div class="card">
-                        <img src="Image\tic-tac-toe.jpg" class="card-img-top" alt="tic-tac-toe"  title="Description of the game">
-                    </div>
-                    <div class="card-body">
-                        <a href="tic-tac-toe\index.html" class="btn btn-primary link">Tic-Tac-Toe</a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 mb-4">
-                    <div class="card">
-                        <img src="Image/wordle.jpg" class="card-img-top image" alt="wordle">
-                    </div>
-                    <div class="card-body">
-                        <a href="wordle/index.html" class="btn btn-primary link">Wordle</a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-12 mb-4">
-                    <div class="card">
-                        <img src="Image/photo-album.jpg" class="card-img-top" alt="Photo Album">
-                    </div>
-                    <div class="card-body">
-                        <a href="photo-album/index.html" class="btn btn-primary link">Photo Album</a>
-                    </div>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid text-success">
+                <div class="collapse navbar-collapse ps-3"  id="gfgnavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="aboutme.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Projects\index.html">Projects</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
+                        <a href="mailto:devikam629@gmail.com" class="nav-link " role="button" ><i class="bi bi-envelope-at"></i></a>
+                        <a href="https://github.com/devikamanoj" class="nav-link " role="button" ><i class="bi bi-github"></i></a>
+                        <a href="https://www.linkedin.com/in/devika-manoj-844518211/" class="nav-link " role="button" ><i class="bi bi-linkedin"> </i></a>
+                        <a href="http://devikamanoj.github.io/" class="nav-link " role="button" ><i class="bi bi-globe"></i></a>
+                    </ul>
                 </div>
             </div>
+        </nav>
+        <div style=" margin:100px auto;">
+            <img class="mainme" src="images/me.jpg"  alt="Me">
+            <p id="iname">M Devika <br> </p>
+            <p id="para"> S6 B.Tech Student</p>
+            <a href="aboutme.html" class="bbt">
+                <button type="button" class="btn btn-primary">About Me</button>
+            </a>
         </div>
+        <hr>
+        <footer class="cenfoot">
+            <p>Designed and developed by M Devika</p>
+        </footer>
     </div>
 </body>
 </html>
