tic-tac-toe added

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <a href="tic-tac-toe\index.html" class="btn btn-primary link">Tic-Tac-Toe</a>
+                        <a href="../tic-tac-toe/index.html" class="btn btn-primary link">Tic-Tac-Toe</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 mb-4">
@@ -82,6 +82,7 @@
                 </div>
             </div>
         </div>
+        <hr>
         <footer class="cenfoot">
             <p>Designed and developed by M Devika</p>
         </footer>
