--- a/tic-tac-toe/html/singlePlayer.html
+++ b/tic-tac-toe/html/singlePlayer.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic-tac-toe</title>
+    <title>Tic-Tac-Toe | Single Player</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
@@ -16,38 +16,30 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid text-success">
-                <h4 class="nav">Tic-Tac-Toe</h4>
+                <h4 class="nav">Single Player Game</h4>
                 <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#gfgnavbar">
                     <span class="navbar-toggler-icon"> </span>
                 </button>
                 <div class="collapse navbar-collapse ps-3"  id="gfgnavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="../Projects/index.html"><p class="nav">Home</p></a>
+                            <a class="nav-link" href="../index.html"><p class="nav">Home</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="html/rules.html"><p class="nav">Rules</p></a>
+                            <a class="nav-link " href="rules.html"><p class="nav">Rules</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="html/singlePlayer.html"><p class="nav">Single player</p></a>
+                            <a class="nav-link active" href="singlePlayer.html"><p class="nav">Single player</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="html/doublePlayer.html"><p class="nav">Double player</p></a>
+                            <a class="nav-link" href="doublePlayer.html"><p class="nav">Double player</p></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Navbar ends -->
-        <div>
-            <img class="mainI" src="images/main.jpg" alt="tic-tac-toe">
-            <div class="btns">
-                <a class="btn btn-primary" href="html/singlePlayer.html" role="button">Single Player</a> 
-                <a style='margin-left: 20px;' class="btn btn-primary" href="html/doublePlayer.html" role="button">Double Player</a>
-            </div>           
-        </div>
-        </div>
+        
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
