--- a/aboutme.html
+++ b/aboutme.html
@@ -14,6 +14,9 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid text-success">
+                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#gfgnavbar">
+                    <span class="navbar-toggler-icon"> </span>
+                </button>
                 <div class="collapse navbar-collapse ps-3"  id="gfgnavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
