--- a/tic-tac-toe/html/doublePlayer.html
+++ b/tic-tac-toe/html/doublePlayer.html
@@ -9,14 +9,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <script src="../script.js"></script>
 </head>
 <body>
     <div class="container-fluid">
-        <h1> Tic Tac Toe</h1>
         <!-- Navbar -->
+        <div id="space"></div>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid text-success">
-                <h4 class="nav">Double Player Game</h4>
                 <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#gfgnavbar">
                     <span class="navbar-toggler-icon"> </span>
                 </button>
@@ -40,20 +40,13 @@
         </nav>
         <!-- Navbar ends -->
         <div id="space"></div>
-        <div class="board">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+        <h1 id="heads"> Tic Tac Toe</h1>
+        <div id="space"></div>
+        <div id="board">
         </div>
         <div id="space"></div>
         <button  id="reset-button">Reset</button>
     </div>
-    <script src="../script.js"></script>
+    
 </body>
 </html>
