double pleyer added

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -26,9 +26,6 @@
                             <a class="nav-link active" href="../Projects/index.html"><p class="nav">Home</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="html/rules.html"><p class="nav">Rules</p></a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="html/singlePlayer.html"><p class="nav">Single player</p></a>
                         </li>
                         <li class="nav-item">
@@ -42,8 +39,8 @@
         <div>
             <img class="mainI" src="images/main.jpg" alt="tic-tac-toe">
             <div class="btns">
-                <a class="btn btn-primary" href="html/singlePlayer.html" role="button">Single Player</a> 
-                <a style='margin-left: 20px;' class="btn btn-primary" href="html/doublePlayer.html" role="button">Double Player</a>
+                <a class="btn" href="html/singlePlayer.html" role="button">Single Player</a> 
+                <a style='margin-left: 20px;' class="btn" href="html/doublePlayer.html" role="button">Double Player</a>
             </div>           
         </div>
         </div>
