--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <h1> Tic Tac Toe</h1>
+        <h1 class="heads"> Tic Tac Toe</h1>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid text-success">
