--- a/tic-tac-toe/html/doublePlayer.html
+++ b/tic-tac-toe/html/doublePlayer.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic-Tac-Toe | Double Player</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-</head>
-<body>
-    <div class="container">
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand">
-            <div class="container-fluid ">
-                <div class="collapse navbar-collapse "  id="gfgnavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../index.html"><p class="nav">Home</p></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="singlePlayer.html"><p class="nav">Single player</p></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="doublePlayer.html"><p class="nav">Double player</p></a>
-                        </li>
-                    </ul>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tic-Tac-Toe | Double Player</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="../style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    </head>
+    <body>
+        <div class="container">
+            <!-- Navbar -->
+            <nav class="navbar navbar-expand">
+                <div class="container-fluid ">
+                    <div class="collapse navbar-collapse "  id="gfgnavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../index.html"><p class="nav">Home</p></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="singlePlayer.html"><p class="nav">Single player</p></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="doublePlayer.html"><p class="nav">Double player</p></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-        <!-- Navbar ends -->
+            </nav>
+            <!-- Navbar ends -->
             <h1 id="player-text"> Tic-Tac-Toe</h1>
             <div id="board">
                 <div class="cell" id="0"></div>
@@ -51,7 +51,7 @@
                 <button id="restartButton">Restart</button>
                 <button id="undoButton">Undo</button>
             </div>
-    </div>
-    <script src="../script.js"></script>
-</body>
+        </div>
+        <script src="../script_DP.js"></script>
+    </body>
 </html>
