--- a/tic-tac-toe/html/singlePlayer.html
+++ b/tic-tac-toe/html/singlePlayer.html
@@ -4,29 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic-Tac-Toe | Single Player</title>
+    <title>Tic-Tac-Toe | Double Player</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <h1> Tic Tac Toe</h1>
+    <div class="container">
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid text-success">
-                <h4 class="nav">Single Player Game</h4>
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#gfgnavbar">
-                    <span class="navbar-toggler-icon"> </span>
-                </button>
-                <div class="collapse navbar-collapse ps-3"  id="gfgnavbar">
+        <nav class="navbar navbar-expand">
+            <div class="container-fluid ">
+                <div class="collapse navbar-collapse "  id="gfgnavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html"><p class="nav">Home</p></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="rules.html"><p class="nav">Rules</p></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="singlePlayer.html"><p class="nav">Single player</p></a>
@@ -39,7 +34,24 @@
             </div>
         </nav>
         <!-- Navbar ends -->
-        
+        <h1 id="player-text"> Tic-Tac-Toe</h1>
+        <div id="board">
+            <div class="cell" id="0"></div>
+            <div class="cell" id="1"></div>
+            <div class="cell" id="2"></div>
+            <div class="cell" id="3"></div>
+            <div class="cell" id="4"></div>
+            <div class="cell" id="5"></div>
+            <div class="cell" id="6"></div>
+            <div class="cell" id="7"></div>
+            <div class="cell" id="8"></div>
+        </div>
+        <div id="space"></div>
+        <div class="buttons">
+            <button id="restartButton">Restart</button>
+            <button id="undoButton">Undo</button>
+        </div>
     </div>
+    <script src="../script_SP.js"></script>
 </body>
 </html>
