--- a/Projects/index.html
+++ b/Projects/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6 mb-4">
                     <div class="card">
-                        <img src="Image/wordle.png" class="card-img-top" alt="Wordle" >
+                        <img src="../Projects/Image/wordle.png" class="card-img-top" alt="Wordle" >
                         <div class="overlay">
                             <div class="description">
                                 <h3>Wordle</h3>
@@ -63,12 +63,12 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <a href="wordle/index.html" class="btn btn-primary link">Wordle</a>
+                        <a href="../wordle/index.html" class="btn btn-primary link">Wordle</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12 mb-4">
                     <div class="card">
-                        <img src="Image/photo-album.jpg" class="card-img-top" alt="photo-album" >
+                        <img src="../Projects/Image/photo-album.jpg" class="card-img-top" alt="photo-album" >
                         <div class="overlay">
                             <div class="description">
                                 <h3>Photo Album</h3>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <a href="photo-album/index.html" class="btn btn-primary link">Photo Album</a>
+                        <a href="../photo-album/index.html" class="btn btn-primary link">Photo Album</a>
                     </div>
                 </div>
             </div>
