--- a/wordle/index.html
+++ b/wordle/index.html
@@ -34,9 +34,11 @@
             </div>
         </nav>
         <!-- Navbar ends -->
-        <h1>W O R D L E</h1>
+        <h1 id="heads">W O R D L E</h1>
+        <hr>
+        <h1 id="answer"></h1>
+        <p id="alerts"></p>
         <div id="game">
-            
         </div>
     </div>
     <script src="script.js"></script>
