restart button added

--- a/wordle/index.html
+++ b/wordle/index.html
@@ -38,8 +38,8 @@
         <hr>
         <h1 id="answer"></h1>
         <p id="alerts"></p>
-        <div id="game">
-        </div>
+        <div id="game"></div>
+        <button id="restart"> RESTART</button>
     </div>
     <script src="script.js"></script>
 </body>
