changes in style

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -68,10 +68,10 @@
                 </div>
                 <div class="col-md-4 col-sm-12 mb-4">
                     <div class="card">
-                        <img src="../Projects/Image/photo-album.jpg" class="card-img-top" alt="photo-album" >
+                        <a href="../photo-album/"></a><img src="../Projects/Image/photo-album.jpg" class="card-img-top" alt="photo-album" >
                         <div class="overlay">
                             <div class="description">
-                                <h3>Photo Album</h3>
+                                <a href="../photo-album/index.html"><h3>Photo Album</h3></a>
                                 <p>A collection of photographs showcasing the beauty and diversity of various travel destinations across the globe.</p>
                             </div>
                         </div>
