--- a/photo-album/index.html
+++ b/photo-album/index.html
@@ -68,41 +68,38 @@
                     </div>
                     <div class="modal-body">
                         <div class="container disable">
-                            <h2>Easy Image Editor</h2>
+                            <h2>Image Editor</h2>
                             <div class="wrapper">
                                 <div class="editor-panel">
                                     <div class="filter">
                                         <label class="title">Filters</label>
                                         <div class="options">
                                             <button id="brightness" class="active">Brightness</button>
-                                            <button id="saturation">Saturation</button>
-                                            <button id="inversion">Inversion</button>
+                                            <button id="resolution">Resolution</button>
+                                            <button id="avatar">Avatar</button>
                                             <button id="grayscale">Grayscale</button>
+                                            <button id="Qr">QR Code</button>
+                                            <button id="thumbnails">Thumb Nails</button>
                                         </div>
                                         <div class="slider">
                                             <div class="filter-info">
-                                                <p class="name">Brighteness</p>
-                                                <p class="value">100%</p>
+                                                <p id="name">Brighteness</p>
+                                                <p id="value">100%</p>
                                             </div>
                                             <input type="range" value="100" min="0" max="200">
                                         </div>
                                     </div>
-                                    <div class="rotate">
-                                        <label class="title">Rotate & Flip</label>
-                                        <div class="options">
-                                            <button id="left"><i class="fa-solid fa-rotate-left"></i></button>
-                                            <button id="right"><i class="fa-solid fa-rotate-right"></i></button>
-                                            <button id="horizontal"><i class='bx bx-reflect-vertical'></i></button>
-                                            <button id="vertical"><i class='bx bx-reflect-horizontal' ></i></button>
-                                        </div>
-                                    </div>
                                 </div>
-                        <img src="images/1.jpg" class="modal-img" alt="Modal Image">
+                                <img src="images/1.jpg" class="modal-img" alt="Modal Image">
+                            </div>
+                            
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
